--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "categories": [
     "Snippets"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BackendExpert/table-vscode-extension"
+  },
   "contributes": {
     "snippets": [
       {
@@ -18,3 +22,4 @@
     ]
   }
 }
+
